# robot-arm

firmware/robot/: CMakeLists.txt  requirements.txt
firmware/robot/components/motion/: motion.c
firmware/robot/main/: CMakeLists.txt  main.c  parse_moves.c  parse_moves.h
joint_trajectory_stepper/: CMakeLists.txt  pytest.ini  sdkconfig  sdkconfig.old
joint_trajectory_stepper/components/motion/: CMakeLists.txt  motion.c
joint_trajectory_stepper/components/motion/include/: motion.h
joint_trajectory_stepper/main/: CMakeLists.txt  main.c  net_connection.c  net_connection.h
ros_ws/: .gitignore
ros_ws/src/six_dof_arm_description/: CMakeLists.txt  package.xml
ros_ws/src/six_dof_arm_description/launch/: display.launch.py
ros_ws/src/six_dof_arm_description/meshes/: base_link.dae  link02.dae  link05.dae
ros_ws/src/six_dof_arm_description/rviz/: six_dof_arm.rviz
ros_ws/src/six_dof_arm_description/urdf/: six_dof_arm.urdf
ros_ws/src/six_dof_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros_ws/src/six_dof_arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  six_dof_arm.ros2_control.xacro  six_dof_arm.srdf  six_dof_arm.urdf.xacro
ros_ws/src/stepper_msgs/: CMakeLists.txt  package.xml
ros_ws/src/stepper_trajectory_processor/: package.xml  setup.cfg  setup.py
tools/: robot gui.py  stepper motors.py  temp.py
tools/resources/: 6dof-arm.urdf
tools/urdf/: 6dof-arm.urdf
tools/urdf/meshes/: end_effector.dae  link01.dae  link03.dae  link04.dae
(+21 files in other folders)
