idf_component_register(
    SRCS 
        "main.c"
        "net_connection.c" 
    INCLUDE_DIRS
        "."
    REQUIRES
        nvs_flash
        esp_netif
        esp_event
        esp_wifi
        wifi_provisioning
        mqtt
        json
        motion
        esp_timer
        micro_ros_espidf_component
)